# C02

./: CMakeLists.txt  README.md
config/: system.ini
docs/: architecture.md  iot_map.md
include/iot/: app.hpp  config_store.hpp  legacy_bootstrap.hpp  logger.hpp  module.hpp  parameter_collector.hpp
include/iot/modules/: modbus_module.hpp  mqtt_module.hpp  network_module.hpp  power_module.hpp  serial_module.hpp  web_module.hpp
scripts/: extract_iot_map.py
src/: app.cpp  config_store.cpp  legacy_bootstrap.cpp  logger.cpp  main.cpp  parameter_collector.cpp
src/modules/: modbus_module.cpp  mqtt_module.cpp  network_module.cpp  power_module.cpp  serial_module.cpp  web_module.cpp
